res/examples/valid/call_scopes.eg
let id = (a: number): number => { a };

let result = {
    let result = id(10);

    result
};

assert_type result, number;