res/examples/invalid/fn_expr_type_mismatch_in_body_undefined_identifier.eg
(a: string): number => { b };

// out: TypeError: `b` is not defined
// out: TypeError: `b` is not defined